# Colab-Rust

./: README.md  analise_carteira_wrapper.py  colab_rust_bridge.py  test_local.py
template_github/: .gitignore  Cargo.toml
template_github/src/: coint.rs  lib.rs
