[package]
name = "template_rust_module"
version = "0.1.0"
edition = "2021"

[lib]
name = "template_rust_module"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
arrow = { version = "54", default-features = false, features = ["prettyprint"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
nalgebra = "0.33"
statrs = "0.17"
rayon = "1.10"
csv = "1"